--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reactsignupwebapp",
   "version": "0.1.0",
-  "homepage": "https://phanit1.github.io/reactsignupwebapp",
+  "homepage": "https://phanit1.github.io/react-signup-webapp/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
